--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>ejemplo</title>
   </head>
   <body>
+<h1>otro titulo</h1>
     <h1>repositorio para codigo facil</h1>
   </body>
 </html>
